Updating pystac demo part

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -38,8 +38,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
-    "#base_domain = \"develop.eoepca.org\"\n",
+    "#base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
     "#base_domain = \"185.52.193.87.nip.io\"\n",
     "#workspace_prefix = \"demo-user\"\n",
     "workspace_prefix = \"user\""
@@ -1408,7 +1408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog.assert_conforms_to(ConformanceClasses.ITEM_SEARCH)"
+    "catalog._stac_io.assert_conforms_to(ConformanceClasses.ITEM_SEARCH)"
    ]
   },
   {
@@ -1418,7 +1418,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "catalog.assert_conforms_to(ConformanceClasses.CORE)"
+    "catalog._stac_io.assert_conforms_to(ConformanceClasses.CORE)"
    ]
   },
   {
