Add a valid bbox query for develop cluster

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -185,6 +185,7 @@
    "outputs": [],
    "source": [
     "#bbox_query = BBox([37.8, 23.4, 38.8, 24.5])\n",
+    "#bbox_query = BBox([39.66, 19.82, 40.64, 21.11])\n",
     "bbox_query = BBox([37, 13.9, 37.9, 15.1])"
    ]
   },
