pystac_client matched function fails without a filter

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -1438,7 +1438,7 @@
    "outputs": [],
    "source": [
     "mysearch = catalog.search(collections=['metadata:main'], max_items=10)\n",
-    "print(f\"{mysearch.matched()} items found\")"
+    "#print(f\"{mysearch.matched()} items found\")"
    ]
   },
   {
