git protocol update

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "manufactured-repair",
    "metadata": {},
    "outputs": [],
@@ -41,10 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fluid-plane",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "client_id: b5832c30-cb26-4d13-9803-4ebcb99d13e9\n",
+      "Client state saved to file: state.json\n"
+     ]
+    }
+   ],
    "source": [
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
@@ -68,12 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "formed-scope",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Request] GET => https://test.demo.eoepca.org/.well-known/uma2-configuration\n",
+      "<Response [200]>\n",
+      "token_endpoint: https://test.demo.eoepca.org/oxauth/restv1/token\n",
+      "[Request] POST => https://test.demo.eoepca.org/oxauth/restv1/token\n"
+     ]
+    }
+   ],
    "source": [
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as UserA and get ID Token\n",
@@ -211,7 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "resource_url= f's3://{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
+    "resource_url= f'{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
     "demo.workspace_register(workspace_url, workspace_name,resource_url, id_token=user_id_token, access_token=workspace_access_token)"
    ]
   },
@@ -256,13 +276,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "distinguished-particle",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ADES WPS endpoint: http://ades.demo.eoepca.org/bob/zoo\n",
+      "ADES API Processes endpoint: http://ades.demo.eoepca.org/bob/wps3\n"
+     ]
+    }
+   ],
    "source": [
     "# ADES URLs\n",
-    "ades_base_url = \"http://ades.demo.eoepca.org\" #\"http://ades.\" + platform_domain\n",
+    "ades_base_url = \"http://ades.\" + base_domain\n",
     "ades_wps_url = ades_base_url + \"/\" + USER_NAME + \"/zoo\"; print(\"ADES WPS endpoint:\", ades_wps_url)\n",
     "ades_proc_url = ades_base_url + \"/\" + USER_NAME + \"/wps3\"; print(\"ADES API Processes endpoint:\", ades_proc_url)"
    ]
@@ -277,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "architectural-college",
    "metadata": {},
    "outputs": [],
@@ -298,10 +327,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "progressive-experiment",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Request] GET => http://ades.demo.eoepca.org/bob/wps3/processes\n",
+      "[Process List] = 200 (OK)\n",
+      "Processes: ['DeployProcess', 'GetStatus', 'UndeployProcess', 's-expression-0_0_2']\n"
+     ]
+    }
+   ],
    "source": [
     "# API Processes - List Processes\n",
     "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
@@ -474,6 +513,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db6fedd7-0c27-4285-956a-221068ecf502",
+   "metadata": {},
+   "source": [
+    "From the S3 url let's retrieve the folder in the bucket where the result files are stored."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8f81f8d4-ead8-4bf4-b4d8-3333a30e2b34",
@@ -548,7 +595,8 @@
    "id": "75b90d16-9029-480c-bd44-df12056ea691",
    "metadata": {},
    "source": [
-    "#### Workspace: Inspect results"
+    "#### Workspace: Inspect results\n",
+    "Let's inspect the result files in the user S3 bucket."
    ]
   },
   {
@@ -571,6 +619,14 @@
     "for obj in bucket.objects.filter(Prefix=result_folder_name):\n",
     "    print(' ->', obj.key)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6106fda5-d031-4826-ad6f-c4c50cf47003",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
