[DemoClient] rationalise fn `register_client`

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -47,8 +47,9 @@
     "\n",
     "authorize_url = 'https://'+platform_domain+'/oxauth/restv1/authorize'\n",
     "token_url = 'https://'+platform_domain+'/oxauth/restv1/token'\n",
+    "redirect_uri_for_github = f\"https://{platform_domain}/oxauth/auth/passport/img/github.png\"\n",
     "demo = client.DemoClient(base_url)\n",
-    "demo.register_um_client()\n",
+    "demo.register_client([redirect_uri_for_github])\n",
     "demo.save_state()"
    ]
   },
@@ -110,6 +111,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0ecd3577",
    "metadata": {},
    "source": [
     "The ID Token (JWT) identifies the user via user_name / sub (Subject) fields, and the client via the aud (Audience) field. The JWT is signed and can be verified, using the kid (Key ID) field, via the JWKS endpoint of the Authorization Server."
