Processing demo update

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "manufactured-repair",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,8 @@
     "import utils.DemoClient as client\n",
     "import jwt\n",
     "import json\n",
-    "from owslib.csw import CatalogueServiceWeb"
+    "from owslib.csw import CatalogueServiceWeb\n",
+    "import os"
    ]
   },
   {
@@ -41,19 +42,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fluid-plane",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "client_id: b5832c30-cb26-4d13-9803-4ebcb99d13e9\n",
-      "Client state saved to file: state.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#-------------------------------------------------------------------------------\n",
     "# Initialise client\n",
@@ -77,23 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "formed-scope",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Request] GET => https://test.demo.eoepca.org/.well-known/uma2-configuration\n",
-      "<Response [200]>\n",
-      "token_endpoint: https://test.demo.eoepca.org/oxauth/restv1/token\n",
-      "[Request] POST => https://test.demo.eoepca.org/oxauth/restv1/token\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#-------------------------------------------------------------------------------\n",
     "# Authenticate as UserA and get ID Token\n",
@@ -276,19 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "distinguished-particle",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ADES WPS endpoint: http://ades.demo.eoepca.org/bob/zoo\n",
-      "ADES API Processes endpoint: http://ades.demo.eoepca.org/bob/wps3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ADES URLs\n",
     "ades_base_url = \"http://ades.\" + base_domain\n",
@@ -306,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "architectural-college",
    "metadata": {},
    "outputs": [],
@@ -327,20 +299,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "progressive-experiment",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Request] GET => http://ades.demo.eoepca.org/bob/wps3/processes\n",
-      "[Process List] = 200 (OK)\n",
-      "Processes: ['DeployProcess', 'GetStatus', 'UndeployProcess', 's-expression-0_0_2']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# API Processes - List Processes\n",
     "response, ades_access_token, process_ids = demo.proc_list_processes(ades_proc_url, id_token=user_id_token, access_token=ades_access_token)\n",
@@ -353,6 +315,28 @@
    "metadata": {},
    "source": [
     "#### ADES: Deploy Application\n",
+    "**_Application Deployment Payload_**<br>\n",
+    "Use a helper script to create the POST body for the application deployment request, using the Application Package URL discovered earlier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02d33aa0-1ef4-455d-b6de-245d7546a69c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "application_package_url=f\"s3://{resource_url}\"\n",
+    "os.system(f'../data/create-deploy-body-cwl.sh \"{application_package_url}\"')\n",
+    "!cat ../data/app-deploy-body-cwl.json"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35368200-be69-409f-ad37-74fa2b761470",
+   "metadata": {},
+   "source": [
+    "\n",
     "**POST {service_url}/processes**<br>\n",
     "Deploys application to the ADES.<br>\n",
     "Request body is json in which the input is the Application Package describing the application.<br>\n",
@@ -369,7 +353,7 @@
     "# API Processes - Deploy Application\n",
     "#response, ades_access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-atom.json\", id_token=user_id_token, access_token=ades_access_token)\n",
     "\n",
-    "response, access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl-S3.json\", id_token=user_id_token, access_token=ades_access_token)"
+    "response, access_token = demo.proc_deploy_application(ades_proc_url, \"../data/app-deploy-body-cwl.json\", id_token=user_id_token, access_token=ades_access_token)"
    ]
   },
   {
@@ -438,7 +422,7 @@
    "outputs": [],
    "source": [
     "# API Processes - Execute Application\n",
-    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, app_name, \"../data/app-execute-body.json\", id_token=user_id_token, access_token=ades_access_token)"
+    "response, ades_access_token, job_location_path = demo.proc_execute_application(ades_proc_url, app_name, \"../data/s-expression-execute-body.json\", id_token=user_id_token, access_token=ades_access_token)"
    ]
   },
   {
