--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -38,11 +38,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#base_domain = \"demo.eoepca.org\"\n",
-    "base_domain = \"develop.eoepca.org\"\n",
+    "base_domain = \"demo.eoepca.org\"\n",
+    "#base_domain = \"develop.eoepca.org\"\n",
     "#base_domain = \"185.52.193.87.nip.io\"\n",
-    "#workspace_prefix = \"demo-user\"\n",
-    "workspace_prefix = \"user\""
+    "workspace_prefix = \"demo-user\"\n",
+    "#workspace_prefix = \"user\""
    ]
   },
   {
@@ -1325,6 +1325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "base_domain = \"develop.eoepca.org\"\n",
     "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'"
    ]
   },
