Comment out parsing all 750k catalogue records

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_record = list(csw.records)[0]"
+    "selected_record = list(csw.records)[1]"
    ]
   },
   {
@@ -381,26 +381,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw_records = {}\n",
-    "sortby = SortBy([SortProperty('dc:title', 'ASC')])\n",
-    "pagesize=10\n",
-    "maxrecords=1000\n",
-    "startposition = 0\n",
-    "nextrecord = getattr(csw, 'results', 1)\n",
-    "while nextrecord != 0:\n",
-    "    csw.getrecords2(constraints=[anytext_query], startposition=startposition,\n",
-    "                    maxrecords=pagesize, sortby=sortby)\n",
-    "    csw_records.update(csw.records)\n",
-    "    if csw.results['nextrecord'] == 0:\n",
-    "        break\n",
-    "    startposition += pagesize\n",
-    "    if startposition >= maxrecords:\n",
-    "        break\n",
-    "csw.records.update(csw_records)\n",
-    "records = '\\n'.join(csw.records.keys())\n",
-    "print('Found {} records.\\n'.format(len(csw.records.keys())))\n",
-    "for key, value in list(csw.records.items()):\n",
-    "    print(f'identifier: {value.identifier}\\ntype: {value.type}\\ntitle: {value.title}\\n')"
+    "#csw_records = {}\n",
+    "#sortby = SortBy([SortProperty('dc:title', 'ASC')])\n",
+    "#pagesize=10\n",
+    "#maxrecords=1000\n",
+    "#startposition = 0\n",
+    "#nextrecord = getattr(csw, 'results', 1)\n",
+    "#while nextrecord != 0:\n",
+    "#    csw.getrecords2(constraints=[anytext_query], startposition=startposition,\n",
+    "#                    maxrecords=pagesize, sortby=sortby)\n",
+    "#    csw_records.update(csw.records)\n",
+    "#    if csw.results['nextrecord'] == 0:\n",
+    "#        break\n",
+    "#    startposition += pagesize\n",
+    "#    if startposition >= maxrecords:\n",
+    "#        break\n",
+    "#csw.records.update(csw_records)\n",
+    "#records = '\\n'.join(csw.records.keys())\n",
+    "#print('Found {} records.\\n'.format(len(csw.records.keys())))\n",
+    "#for key, value in list(csw.records.items()):\n",
+    "#    print(f'identifier: {value.identifier}\\ntype: {value.type}\\ntitle: {value.title}\\n')"
    ]
   },
   {
