Adding workspace catalogue demo part

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -558,6 +558,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "189d1f9d-6abe-405e-a652-d2f73a748239",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "We now instantiate a client to interact with the platform.<br>\n",
+    "The client dynamically registers with the Authorization Server to take part in UMA (User Managed Access) flows through which authorization is obtained for scoped access resources on behalf of the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f997cbd-b8d5-4e7d-bfee-d12ae92602ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import utils.DemoClient as client\n",
+    "demo = client.DemoClient(f\"https://test.{base_domain}\")\n",
+    "demo.register_client()\n",
+    "demo.save_state()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7efae0f-7e4b-41ac-9587-22015769da79",
+   "metadata": {},
+   "source": [
+    "User authenticates and the client receives an ID Token (JWT) that represents the user.<br>\n",
+    "For convenience within the Jupyter notebook we use a username/password authentication - but the primary mechanism is to rely upon external identity provision.<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "491f99c1-c1b1-4f45-929c-13f6b53cf37f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Authenticate as user 'alice' and get ID Token\n",
+    "#-------------------------------------------------------------------------------\n",
+    "USER_ALICE=\"alice\"\n",
+    "USER_ALICE_PASSWORD=\"defaultPWD\"\n",
+    "alice_id_token = demo.get_id_token(USER_ALICE, USER_ALICE_PASSWORD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2139491a-d5cc-49e3-8811-0548b8dc1fa6",
+   "metadata": {},
+   "source": [
+    "Alice uses the Processor Development Environment (PDE) to develop, test and package an application.\n",
+    "Alice's published outputs are:\n",
+    "* Docker image published to DockerHub\n",
+    "* Application Package (CWL) published to Resource Catalogue (TBD) and/or GitHub - accessible by href"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4b3ed80-d735-4d0e-bdf4-aab5ac197928",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app_id = \"nhi\"\n",
+    "app_version = \"0_0_3\"\n",
+    "application_name = f\"{app_id}-{app_version}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42659274-85ab-4ac1-adad-cbe336dcf820",
+   "metadata": {},
+   "source": [
+    "Setting up the authentication headers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "362b4dc7-d4b4-4922-ac70-3c46812ed18e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    'Authorization': 'Bearer ' + alice_id_token\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "553feac4-ffae-42dc-8006-fa0ca61bcd09",
@@ -566,10 +657,7 @@
    },
    "outputs": [],
    "source": [
-    "#workspace_endpoint = 'https://resource-catalogue.user.185.52.193.87.nip.io'\n",
-    "#workspace_endpoint = 'https://resource-catalogue.user.demo.eoepca.org'\n",
-    "#workspace_endpoint = 'https://resource-catalogue.rm-user-eric.185.52.193.87.nip.io'\n",
-    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}.{base_domain}/csw'"
+    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ALICE}.{base_domain}/csw'"
    ]
   },
   {
@@ -579,7 +667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw = CatalogueServiceWeb(workspace_endpoint,timeout=30)"
+    "csw = CatalogueServiceWeb(workspace_endpoint,timeout=30,headers=headers)"
    ]
   },
   {
@@ -613,11 +701,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cde3d7c4-b984-4f3c-a5b9-c72c9d391963",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csw.records[app_id].references"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4a52770-38f3-443c-bc82-b0ba0456b2d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract the URL for the Application Package\n",
+    "application_package_url = csw.records[app_id].references[1]['url']\n",
+    "#application_package_url = \"https://app-packages.s3.fr-par.scw.cloud/nhi/app-nhi.dev.0.0.3.cwl\"\n",
+    "print(f\"Application Package URL = {application_package_url}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "608bd426-e7e1-48d4-a173-56608b31d32e",
    "metadata": {},
    "source": [
     "Then, using the identifiers, the user can parse the links to the output data as well as any applications that are available ([Common Workflow Language [CWL]](https://www.commonwl.org))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92a9ed4e-8ae8-4697-881b-b88c86d54ebc",
+   "metadata": {},
+   "source": [
+    "In this part of the demo, Eric will use the workspace resource catalogue endpoint to discover processing output.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab1474c4-eeec-407c-bc3b-8a488929df4f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Authenticate as user 'eric' and get ID Token\n",
+    "#-------------------------------------------------------------------------------\n",
+    "USER_ERIC=\"eric\"\n",
+    "USER_ERIC_PASSWORD=\"defaultPWD\"\n",
+    "eric_id_token = demo.get_id_token(USER_ERIC, USER_ERIC_PASSWORD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0c2e652-b436-4d57-b00d-3f3e53c54ae4",
+   "metadata": {},
+   "source": [
+    "Setting up the authentication headers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00026b8f-663d-4c65-9ac1-8a658b08230f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    'Authorization': 'Bearer ' + eric_id_token\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5203de97-ddde-4b2b-880d-036bd8aa35da",
+   "metadata": {},
+   "source": [
+    "Eric uses his workspace catalogue to list all records identifier, type and title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44166421-586f-4763-a9cd-6267e4654b14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "workspace_endpoint = f'https://resource-catalogue.{workspace_prefix}-{USER_ERIC}.{base_domain}/csw'\n",
+    "print(f\"Eric's workspace (catalogue): {workspace_endpoint}\")\n",
+    "csw = CatalogueServiceWeb(workspace_endpoint, timeout=30,headers=headers)\n",
+    "csw.getrecords2(maxrecords=10)\n",
+    "csw.results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c1369b7-3f64-4cd7-802a-bee6b1de89ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for rec in csw.records:\n",
+    "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')\n",
+    "csw.records[rec].references"
    ]
   },
   {
@@ -627,7 +815,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.records['INDEX_S2A_MSIL2A_20191216T004701_N0213_R102_T53HPA_20191216T024808'].references"
+    "csw.records['S2B_36RTT_20191205_0_L2A'].references"
    ]
   },
   {
@@ -638,17 +826,6 @@
    "outputs": [],
    "source": [
     "csw.records['s-expression'].references"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37806ccf-1450-47d3-ad97-94e5b17d8641",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csw.getrecords2(maxrecords=20, distributedsearch=True, hopcount=1)\n",
-    "csw.results"
    ]
   },
   {
