UM Demo Updates, updated scim library version and client registration method

--- a/demoroot/notebooks/01 User Management.ipynb
+++ b/demoroot/notebooks/01 User Management.ipynb
@@ -19,7 +19,8 @@
     "import utils.DemoClient as client\n",
     "import jwt\n",
     "import json\n",
-    "import requests"
+    "import requests\n",
+    "from rauth import OAuth2Service"
    ]
   },
   {
@@ -44,7 +45,8 @@
     "base_domain = \"demo.eoepca.org\"\n",
     "platform_domain = \"test.\" + base_domain\n",
     "base_url = \"https://\" + platform_domain\n",
-    "\n",
+    "ades_res= \"http://ades-pepapi.\" + base_domain\n",
+    "pdp_url= \"http://\"+platform_domain+\"/pdp\"\n",
     "authorize_url = 'https://'+platform_domain+'/oxauth/restv1/authorize'\n",
     "token_url = 'https://'+platform_domain+'/oxauth/restv1/token'\n",
     "redirect_uri_for_github = f\"https://{platform_domain}/oxauth/auth/passport/img/github.png\"\n",
@@ -80,12 +82,12 @@
    "outputs": [],
    "source": [
     "#-------------------------------------------------------------------------------\n",
-    "# Authenticate as UserA and get ID Token\n",
+    "# Authenticate as Eric (isOperator: True) and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
-    "USER_NAME=\"demoA\"\n",
+    "USER_NAME=\"eric\"\n",
     "USER_PASSWORD=\"defaultPWD\"\n",
-    "user_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
-    "print(\"user_id_token:\", user_id_token)"
+    "operator_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
+    "print(\"operator_id_token:\", operator_id_token)"
    ]
   },
   {
@@ -104,9 +106,10 @@
    "outputs": [],
    "source": [
     "# Inspect ID Token\n",
-    "jwt_header = jwt.get_unverified_header(user_id_token)\n",
-    "jwt_payload = jwt.decode(user_id_token, options={\"verify_signature\": False})\n",
-    "print(\"JWT Header:\", json.dumps(jwt_header, indent = 2), \"\\n---\\nJWT Payload:\", json.dumps(jwt_payload, indent = 2))"
+    "jwt_header = jwt.get_unverified_header(operator_id_token)\n",
+    "jwt_payload = jwt.decode(operator_id_token, options={\"verify_signature\": False})\n",
+    "print(\"JWT Header:\", json.dumps(jwt_header, indent = 2), \"\\n---\\nJWT Payload:\", json.dumps(jwt_payload, indent = 2))\n",
+    "operator_UID= jwt_payload[\"sub\"]"
    ]
   },
   {
@@ -140,18 +143,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rauth import OAuth2Service\n",
+    "#--------------------------\n",
+    "#LINK TO SOCIAL PASSPORT\n",
+    "#--------------------------\n",
     "client_id, client_secret = demo.get_client_credentials()\n",
     "\n",
     "scope = ['openid', 'email', 'user_name', 'is_operator']\n",
-    "redirect_uri =base_url+ \"/oxauth/auth/passport/img/github.png\"\n",
-    "code = None\n",
-    "\n",
     "service = OAuth2Service(name=\"foo\", client_id=client_id, client_secret=client_secret, access_token_url=token_url, authorize_url=authorize_url, base_url=base_url)\n",
-    "params = {'scope': scope,\n",
-    "          'response_type': 'code',\n",
-    "          'redirect_uri': redirect_uri,\n",
-    "          'acr_values': 'passport_social'}\n",
+    "params = {'scope': scope,'response_type': 'code','redirect_uri': redirect_uri_for_github,'acr_values': 'passport_social'}\n",
     "\n",
     "url = service.get_authorize_url(**params)\n",
     "print(\"Link to Social Passport Login: \")\n",
@@ -173,15 +172,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#--------------------------\n",
+    "#TOKEN RETRIEVAL\n",
+    "#--------------------------\n",
     "code_url = input('Please paste redirect URL: ').strip()\n",
     "code = code_url.split('code=')[1].split('&')[0]\n",
-    "data = {\n",
-    "  'client_id': client_id,\n",
-    "  'client_secret': client_secret,\n",
-    "  'code': code,\n",
-    "  'grant_type': 'authorization_code',\n",
-    "  'redirect_uri': redirect_uri\n",
-    "}\n",
+    "data = {'client_id': client_id, 'client_secret': client_secret, 'code': code, 'grant_type': 'authorization_code', 'redirect_uri': redirect_uri_for_github}\n",
     "response = requests.post(token_url, data=data)\n",
     "print(response.text)"
    ]
@@ -193,7 +189,53 @@
    "source": [
     "## Access Protected Endpoint\n",
     "We perform an example access to an ADES resource.\n",
-    "The ADES is protected by a PEP (Policy Enforcement Point). When accessing the protected endpoint the client follows a UMA (User Managed Access) flow to obtain authorized access on behalf of the user. The UMA flow utilises the ID Token to obtain a 'ticket' which can then be exchanged by the client for an access token (RPT - Relying Party Token) that acts as a short-lived (e.g. 5 mins) credential for the specific access by a specific client, to a specific resource, on behalf of a specific user."
+    "The ADES is protected by a PEP (Policy Enforcement Point). When accessing the protected endpoint the client follows a UMA (User Managed Access) flow to obtain authorized access on behalf of the user. The UMA flow utilises the ID Token to obtain a 'ticket' which can then be exchanged by the client for an access token (RPT - Relying Party Token) that acts as a short-lived (e.g. 5 mins) credential for the specific access by a specific client, to a specific resource, on behalf of a specific user.\n",
+    "The use case will perform an update to the policy associated to the resource in order to allow access to a non operator user, external to the resource."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fc1e54c",
+   "metadata": {},
+   "source": [
+    "### Resource Insertion\n",
+    "The authenticated user must be an operator to realize this operation.\n",
+    "A call to the PEP resource API is done in order to include a new resource for the demo into the database. This resource has protected scope so only the operator user is able to access it.\n",
+    "If that resource already exists a 422 response will be returned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b822ca4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--------------------------\n",
+    "#INSERT RESOURCE\n",
+    "#--------------------------\n",
+    "uri= \"/demo/testResource\"\n",
+    "data = '{\"icon_uri\":\"'+uri+'\",\"name\":\"DemoResource\",\"scopes\":[\"protected_access\"]}'\n",
+    "headers = {'Content-Type': 'application/json, Authorization: Bearer '+ operator_id_token}\n",
+    "response = requests.post(ades_res+'/resources', headers=headers, data=data, verify=False)\n",
+    "print(\"Resource Insertion with code: \" + str(response))\n",
+    "\n",
+    "#--------------------------\n",
+    "#RESOURCE PUBLIC VISUALIZATION-->Query the resource endpoint to check if the resource is inserted\n",
+    "#--------------------------\n",
+    "operation_headers = { 'content-type': \"application/x-www-form-urlencoded\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+operator_id_token}\n",
+    "res = requests.get(ades_res +\"/resources\"+\"?path=\"+uri, headers=headers, verify=False)\n",
+    "k=res.json()\n",
+    "print(\"Resource found in database: \" + str(k))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c3eb450",
+   "metadata": {},
+   "source": [
+    "### Operator successful access to resource\n",
+    "The operator will perform the UMA Flow to prove a successful access to the resource created."
    ]
   },
   {
@@ -204,63 +246,129 @@
    "outputs": [],
    "source": [
     "#--------------------------\n",
-    "#GET TICKET\n",
+    "#GET TICKET-->Naive request to resource with no authorization, ticket returned\n",
     "#--------------------------\n",
+    "rpt=None\n",
     "ades_res_proc_url = \"http://ades-pep.\" + base_domain + \"/authorize\" ; print(\"ADES API Processes endpoint:\", ades_res_proc_url)\n",
-    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+user_id_token}\n",
-    "\n",
-    "tkt = requests.get(ades_res_proc_url, headers=headers, verify=False)\n",
+    "ticket_headers_oper = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \" + operator_id_token, \"X-Original-Uri\": uri }\n",
+    "tkt = requests.get(ades_res_proc_url, headers=ticket_headers_oper, verify=False)\n",
     "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
-    "print(\"401 Unauthorized, ticket returned: \"+ticket)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0af72643",
-   "metadata": {},
-   "source": [
-    "Request RPT token from UMA endpoints giving a ticket and the user id_token"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3426dbf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(\"401 Unauthorized, ticket returned: \"+ticket)\n",
+    "\n",
     "#--------------------------\n",
-    "#GET RPT\n",
+    "#GET RPT-->Request RPT token from UMA endpoints giving a ticket and the user id_token\n",
     "#--------------------------\n",
-    "token_ep= base_url + \"/oxauth/restv1/token\"\n",
-    "client_id, client_secret = demo.get_client_credentials()\n",
-    "data = \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+user_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
-    "headers= { 'Content-Type': 'application/x-www-form-urlencoded', 'cache-control': 'no-cache' }\n",
-    "rpts_response = requests.post(token_ep, data=data, headers=headers, verify = False)\n",
+    "data = \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+operator_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
+    "rpt_headers= { 'Content-Type': 'application/x-www-form-urlencoded', 'cache-control': 'no-cache' }\n",
+    "rpts_response = requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
     "rpt = rpts_response.json()[\"access_token\"]\n",
-    "print(\"The UMA returns: \" + str(rpts_response))\n",
-    "print(\"The RPT Token: \"+ str(rpt))"
+    "print(\"The UMA returns: \" + str(rpts_response) + \" with a RPT UMA Token\" + str(rpt))\n",
+    "\n",
+    "#--------------------------\n",
+    "#ACCESS TO RESOURCE-->The access_token is returned and the request to the resource is retried with approved credentials\n",
+    "#--------------------------\n",
+    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt, \"X-Original-Uri\": uri}\n",
+    "resource_access = requests.get(ades_res_proc_url, headers=headers, verify=False)\n",
+    "print(\"Retrying access to resource with proper token: \"+ str(resource_access))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "32856e57",
+   "id": "59ccc8eb",
    "metadata": {},
    "source": [
-    "The access_token is returned and the access to the resource is retried with aproved credentials"
+    "### Non Operator denied access to resource\n",
+    "The Alice user (not an operator) will perform the UMA Flow to prove an unsuccessful attempt to resource access.\n",
+    "The Login Service will call the PDP to check if the policy associated to the resource allows access to Alice. Once the PDP checks the resource is not accessible by Alice, the RPT request will respond with a 403 Forbidden by Policy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce25d9e9",
+   "id": "8b6f3200",
    "metadata": {},
    "outputs": [],
    "source": [
     "#--------------------------\n",
-    "#ACCESS TO RESOURCE (NO TICKET RETURNED)\n",
+    "#USER AUTH\n",
     "#--------------------------\n",
-    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt}\n",
+    "USER_NAME=\"alice\"\n",
+    "USER_PASSWORD=\"defaultPWD\"\n",
+    "alice_id_token = demo.get_id_token(USER_NAME, USER_PASSWORD)\n",
+    "alice_UID =jwt.decode(alice_id_token, options={\"verify_signature\": False})[\"sub\"]\n",
+    "\n",
+    "#--------------------------\n",
+    "#GET TICKET--> 401\n",
+    "#--------------------------\n",
+    "ticket_headers_alice = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+alice_id_token, \"X-Original-Uri\": uri}\n",
+    "tkt = requests.get(ades_res_proc_url, headers=ticket_headers_alice, verify=False)\n",
+    "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
+    "print(\"401 Unauthorized, ticket returned: \" + str(ticket))\n",
+    "#--------------------------\n",
+    "#GET RPT--> 403\n",
+    "#--------------------------\n",
+    "data = \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+alice_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
+    "rpts_response = requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
+    "print(\"Forbidden for non operator user: \" + str(rpts_response))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9709f99c",
+   "metadata": {},
+   "source": [
+    "### Update Policy\n",
+    "The operator user who is the resource owner will perform a call to the PDP to update the policy associated to that resource to include access to Alice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe392eb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--------------------------\n",
+    "#UPDATE POLICY--> 200\n",
+    "#--------------------------\n",
+    "data={'name':'Updated Policy for Demo Resource','description':'Policy modified for demo purpose','config':{'resource_id':k[\"_id\"] ,'action':'get','rules':[{'OR':[{'EQUAL':{'id':operator_UID}},{'EQUAL':{'id':alice_UID}}]}]},'scopes':['protected_access']}\n",
+    "resp, text = demo.update_policy(pdp_url, data, k[\"_id\"], operator_id_token)\n",
+    "print(resp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "488cc02c",
+   "metadata": {},
+   "source": [
+    "### Non Operator successful access to resource\n",
+    "With the new policy the user Alice will perform the same request to the resource but now with granted access."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "309be048",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#--------------------------\n",
+    "#GET TICKET--> 401\n",
+    "#--------------------------\n",
+    "tkt = requests.get(ades_res_proc_url, headers=ticket_headers_alice, verify=False)\n",
+    "ticket = tkt.headers[\"WWW-Authenticate\"].split(\"ticket=\")[1]\n",
+    "print(\"401 Unauthorized, ticket returned: \"+ticket)\n",
+    "#--------------------------\n",
+    "#GET RPT--> 200\n",
+    "#--------------------------\n",
+    "data = \"claim_token_format=http://openid.net/specs/openid-connect-core-1_0.html#IDToken&claim_token=\"+alice_id_token+\"&ticket=\"+ticket+\"&grant_type=urn%3Aietf%3Aparams%3Aoauth%3Agrant-type%3Auma-ticket&client_id=\"+client_id+\"&client_secret=\"+client_secret+\"&scope=openid\"\n",
+    "rpts_response = requests.post(token_url, data=data, headers=rpt_headers, verify = False)\n",
+    "rpt = rpts_response.json()[\"access_token\"]\n",
+    "print(\"The UMA returns: \" + str(rpts_response) + \" with a RPT UMA Token\" + str(rpt))\n",
+    "#--------------------------\n",
+    "#ACCESS TO RESOURCE--> 200\n",
+    "#--------------------------\n",
+    "headers = { 'content-type': \"application/json\", \"cache-control\": \"no-cache\", \"Authorization\": \"Bearer \"+rpt, \"X-Original-Uri\": uri}\n",
     "tkt = requests.get(ades_res_proc_url, headers=headers, verify=False)\n",
     "print(\"Retrying access to resource with proper token: \"+ str(tkt))"
    ]
